Regression: Error when trying to move a keyframe #108574

Closed
opened 2023-06-04 13:57:11 +02:00 by Impeccable Explanation · 2 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA Geforce GTX 1050

Blender Version
Broken: 4.0 Alpha, version 2023-06-03 14:21 (ab6860f3de)
Worked: 3.6 Beta, version 2023-06-03 10:34 (2ce5fc4a3e)

Caused by c4a4a89ef5

Short description of error
When trying to move a keyframe, Blender shows an error "Use 'Time_Translate' Transform mode instead of 'Translation' mode for translating keyframes in Dope Sheet Editor". This happens in every file, including the startup files (General, Sculpting etc.)

Exact steps for others to reproduce the error

  1. Open Blender
  2. Add a keyframe to the default cube
  3. Try to move the keyframe in the animation tab
    obrazek
**System Information** Operating system: Windows 10 Graphics card: NVIDIA Geforce GTX 1050 **Blender Version** Broken: 4.0 Alpha, version 2023-06-03 14:21 (ab6860f3de0f) Worked: 3.6 Beta, version 2023-06-03 10:34 (2ce5fc4a3e43) Caused by c4a4a89ef5 **Short description of error** When trying to move a keyframe, Blender shows an error "Use 'Time_Translate' Transform mode instead of 'Translation' mode for translating keyframes in Dope Sheet Editor". This happens in every file, including the startup files (General, Sculpting etc.) **Exact steps for others to reproduce the error** 1. Open Blender 2. Add a keyframe to the default cube 3. Try to move the keyframe in the animation tab ![obrazek](/attachments/4288bbce-7c76-4e75-8652-b15499654d42)
Impeccable Explanation added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-06-04 13:57:12 +02:00
Iliya Katushenock changed title from Error when trying to move a keyframe to Regression: Error when trying to move a keyframe 2023-06-04 13:58:45 +02:00
Member

Thanks for the report. I can confirm, will check.

Thanks for the report. I can confirm, will check.
Pratik Borhade added
Module
Animation & Rigging
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-05 04:17:49 +02:00
Member

Caused by c4a4a89ef5
@mano-wii ^

Caused by c4a4a89ef5ae569f8651de6e50a507adc0386ef9 @mano-wii ^
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-06-05 05:24:40 +02:00
Pratik Borhade added the
Interest
Modeling
label 2023-06-05 05:28:29 +02:00
Philipp Oeser added
Module
Modeling
Interest
Animation & Rigging
and removed
Module
Animation & Rigging
labels 2023-06-05 09:34:57 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-05 15:18:13 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108574
No description provided.