Fix #108574: Error when trying to move a keyframe

Error due to a typo in c4a4a89ef5

_translate > _timetranslate